<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_activities"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_switch_color"
        android:src="@drawable/banner" />

    <Button
        android:id="@+id/btn_play_show"
        android:layout_width="230dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_play_states"
        android:text="@string/play"
        android:textColor="#FC9549"
        android:textIsSelectable="false"
        android:textSize="50sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_instructions_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:text="@string/txt_instructions"
            android:textColor="@color/text_color"
            android:textIsSelectable="false"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_options_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:text="@string/txt_options"
            android:textColor="@color/text_color"
            android:textIsSelectable="false"
            android:textSize="22sp" />
    </RelativeLayout>
</RelativeLayout>
